# ray-tracer

./: .gitignore  .gitmodules  CMakeLists.txt  bbox.hpp  bsdf.hpp  bvh.cpp  bvh.hpp  cmd  intersect.cpp  main.cpp  material.cpp  material.hpp  primitives.hpp  ray_tracer.cpp  ray_tracer.hpp  readme.txt  scene.cpp  scene.hpp  simple.cpp  spectrum.hpp  test.cpp  tmp.cpp  vec3f.hpp
include/: bbox.hpp  mat4f.hpp  mathlib.hpp  ray.hpp  ray_tracer.hpp  scene.hpp  spectrum.hpp  vec3f.hpp  vec4f.hpp
media/: beast.dae  bunny.dae  cbox.dae  cbox_empty.dae  cow.dae  peter.dae  sphere.dae  teapot.dae
utils/: mathlib.hpp  spectrum.hpp  vec3f.hpp
